# StatistikLernProgramm

./: .gitignore  Implementierung_1bis10.md  implementierung_11_phase6_rust_backend.md  implementierung_12_phase7_gamification.md  implementierung_13_phase8_widgets.md  implementierung_14_phase9_quiz.md  implementierung_15_phase10_export.md  implementierung_16_phase11_editor.md  implementierung_17_phase12_settings.md  implementierung_18_phase13_testing.md  implementierung_19_phase14_build.md  implementierung_20_db_schema.md  implementierung_21_kursformat.md  implementierung_22_api_referenz.md  implementierung_23_statistik_kurs.md  implementierung_24_performance.md  implementierung_25_herausforderungen.md  implementierung_26_zeitplan.md
statistik-lab/: package-lock.json  package.json  tauri_dev_log.txt
statistik-lab/src/: app.css
statistik-lab/src-tauri/: Cargo.toml  cargo_errors.txt  fix_encoding.py  tauri.conf.json
statistik-lab/src-tauri/capabilities/: default.json
statistik-lab/src-tauri/src/: lib.rs  main.rs
statistik-lab/src-tauri/src/commands/: achievement_commands.rs  course_commands.rs  dataset_commands.rs  export_commands.rs  lesson_commands.rs  mod.rs  progress_commands.rs  search_commands.rs  settings_commands.rs
statistik-lab/src-tauri/src/db/: connection.rs  migrations.rs
statistik-lab/src-tauri/src/models/: progress.rs
statistik-lab/src-tauri/src/services/: course_service.rs  mod.rs  progress_service.rs
statistik-lab/src-tauri/src/sql/: 001_initial.sql
statistik-lab/src/routes/: +layout.svelte  +page.svelte
(+33 files in other folders)
